--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@
   margin: 10px;
   border-radius: 10px;
   background-color: #485461;
-  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+  background-image: linear-gradient(315deg, #544861 0%, #28313b 74%);
 }
 
 .saved{
@@ -23,7 +23,7 @@
   margin: 10px;
   color: white;
   border-radius: 10px;
-  background-color: #485461;
+  background-color: #544861;
 }
 
 .footer{
@@ -31,10 +31,10 @@
   height: 30px;
   padding: 10px;
   margin: 10px;
-  color: grey;
+  color: rgb(206, 204, 204);
   border-radius: 10px;
   background-color: #485461;
-  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+  background-image: linear-gradient(315deg, #544861 0%, #28313b 74%);
 }
 
 .App-link {
