--- a/client/src/Components/Wrapper.css
+++ b/client/src/Components/Wrapper.css
@@ -5,5 +5,5 @@
   margin: auto;
   border-radius: 10px;
   background-color: #485461;
-  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+  background-image: linear-gradient(315deg, #bfc0b9 0%, #7a7a78 74%);
 }
