--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fbb034;
-  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
+  background-color: #5e9479;
+  background-image: linear-gradient(315deg, #587545 0%, #4b683e 74%);
 }
